# topor

./: .gitignore  LICENSE  README.md  go.mod  pyproject.toml  requirements.txt
cmd/topor/: main.go
internal/core/: discovery.go  models.go  timestamps.go
internal/gui/: app.go  theme.go
internal/handlers/: handler.go  html.go  odt.go  ole.go  ooxml.go  plaintext.go  rtf.go
internal/utils/: backup.go  open_url.go
packaging/linux/: build_appimage.sh  build_deb.sh  topor.desktop
packaging/macos/: build_dmg.sh
packaging/windows/: topor.iss
src/topor/: __init__.py  __main__.py  app.py
src/topor/core/: engine.py  file_discovery.py  models.py  timestamps.py
src/topor/core/handlers/: __init__.py  base.py  html_handler.py  odt.py  ole.py  ooxml.py  plaintext.py  rtf.py
src/topor/gui/: author_panel.py  file_table.py  log_panel.py  main_window.py  styles.py  time_panel.py
src/topor/utils/: backup.py
